# Discord-Rich-Presence-RE9

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat
reframework/autorun/: discord_scout.lua
src/: main.cpp
